<resources>
    <string name="app_name">insthelper</string>
    <string name="action_settings">Settings</string>

    <string name="chat_sdk_version">Version: 1.0.0</string>

    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Account</string>
    <string name="password">Password</string>


    <string name="text_alert">Alert</string>
    <string name="text_offer">Offer</string>
    <string name="text_profile">Profile</string>
    <string name="text_search">Search a job</string>

    <string name="alert">Alert</string>
    <string name="offer_job">Offer</string>
    <string name="profile">Profile</string>

    <string name="search_job">Search</string>
    <string name="edit_message">message</string>
    <string name="button_send">send</string>
    <string name="camera_button">camera</string>

    <string name="open_camera">Open Camera</string>

</resources>
